After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 573726 - gtk+-2.14.7: xbm icons in gnome menu are no longer shown
gtk+-2.14.7: xbm icons in gnome menu are no longer shown
Status: RESOLVED FIXED
Product: gdk-pixbuf
Classification: Platform
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: gdk-pixbuf-maint
gdk-pixbuf-maint
Depends on:
Blocks:
 
 
Reported: 2009-03-02 09:35 UTC by Pacho Ramos
Modified: 2013-12-19 20:42 UTC
See Also:
GNOME target: ---
GNOME version: 2.21/2.22



Description Pacho Ramos 2009-03-02 09:35:33 UTC
Please describe the problem:
This was reported some time ago downstream:
http://bugs.gentoo.org/show_bug.cgi?id=255422

With gtk+-2.12, icons in xbm format were properly shown in gnome-menu, after updating to 2.14, they are no longer shown, even when gdk-pixbuf-query-loaders seems to still support xbm files:
$ gdk-pixbuf-query-loaders|grep xbm
"/usr/lib64/gtk-2.0/2.10.0/loaders/libpixbufloader-xbm.so"
"xbm" 4 "gtk20" "The XBM image format" "LGPL"
"xbm" ""

Downstream has told me that maybe upstream choosed to not support compiling icons on the fly anymore, if this is the case, I would know a bit more information with reasons for dropping this 

Thanks a lot :-)

Steps to reproduce:
1. 
2. 
3. 


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Gilles Dartiguelongue 2009-03-02 09:49:40 UTC
CCing gentoo's gnome herd for tracking purpose.
Comment 2 Matthias Clasen 2013-12-19 04:57:41 UTC
the problem here is that we are now using shared-mime-info for file sniffing, and it does not have any magic for xbm.
Comment 3 Pacho Ramos 2013-12-19 20:42:47 UTC
(In reply to comment #2)
> the problem here is that we are now using shared-mime-info for file sniffing,
> and it does not have any magic for xbm.

Is this then "fixed" then or should be reported to shared-mime-info upstream?